about.css
:root {
  --header-color: rgb(175, 225, 255);
  --copy-color: rgb(250, 235, 255);
}

h1,h2,h3,h4,h5,h6 {
  font-weight: 300;
}

h1 {
  margin-top: 4rem;
}

hr {
  color: rgb(128, 165, 189);
}

p {
  margin-top: 1.2rem;
}

a {
  color: rgb(139, 209, 255);
}

a:visited {
  color: rgb(139, 209, 255);
}

a:hover {
  color: rgb(185, 227, 255);
}

a:active {
  color: rgb(180, 225, 255);
}

ul {
  list-style-image: url('dot.svg');
  padding-left: 1rem;
  padding-top: 0.7rem;
}

ul a {
  text-decoration: none;
}

footer {
  min-height: 1rem;
  padding-bottom: 0rem;
  padding-top: 2rem;
}

.banner-strip {
  position: relative;
  height: 10rem;
  background: radial-gradient(
    130% 55vw ellipse at 10vw 50px,
    rgb(210, 230, 255) 12%,
    rgb(153, 193, 254) 32%,
    rgb(220, 115, 206) 75%,
    rgb(210, 85, 156) 97%);
}

.header-links {
  padding-top: 1.5rem;
}

.header-links a {
  color: rgb(10, 0, 5);
}

.about-wave-top {
  z-index: 2;
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: min(10vw, 5rem);
  background-image: url('banner.svg');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: right 0px bottom 0px;
}

.about-wave-bottom {
  margin-top: 4rem;
  height: 7rem;
  background-color: rgb(43, 30, 89);
  background-image: url('banner-invert.svg');
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: left 0px top 0px;
}

.offset {
  padding-top: 3rem;
}

